fix: likelihood warnung

--- a/teachings/wsi/Inferenzstatistik.mdx
+++ b/teachings/wsi/Inferenzstatistik.mdx
@@ -71,4 +71,4 @@ Detaillierter:
     Bei Max-Likelihood suchen wir also bei einer gegeben Verteilung die Parameter der Verteilung, die die Daten die wir gesehen haben am wahrscheinlichsten machen.
 
 2. Log-Likelihood-Fkt einfach nur $l(\vartheta) = \log(L(\vartheta \mid x_1, ..., x_n))$ anwenden und vereinfachen.
-3. Alles andere Kurvendiskussion.
+3. Alles andere Kurvendiskussion. Hier ist wichtig: **Ihr leitet nach $\alpha$ ab**! 
