feat: combined main

--- a/src/pages/updates.mdx
+++ b/src/pages/updates.mdx
@@ -1,7 +1,8 @@
-import { Main } from "@/layouts/rwth/Main";
+import Main from "@/layouts/Main";
+import {Meta} from "@/layouts/Meta";
 import { HeadLine } from "@/components/rwth/headline";
 
-<Main>
+<Main institute="htwr" meta={<Meta title="Nachrichten of HTWR" description="HTWR Blog zu aktuellen Themen und Hilfe gesuchen"/>}>
 
 <HeadLine>Updates</HeadLine>
 
