--- a/teachings/sibd/dbis/SWT2-0.mdx
+++ b/teachings/sibd/dbis/SWT2-0.mdx
@@ -2,7 +2,7 @@
 title: "SWT 2.0"
 description: Nicht schooon wieder....
 author: Jonas Schneider
-date: 30/07/2023
+date: 31/07/2023
 order: 1
 tags:
   [
@@ -56,16 +56,29 @@ Zusätzlich gibt es noch pro Entity-Typ eine **Kardinalität**. Die gibt an, wie
 - n:m
 
 sind die häufigsten. Auch Beziehungen können ein Attribut haben. Die sind dann einfach mit der Raute verbunden.
+Sie wird oft durch die **(min,max)** Schreibweise angegeben: Heißt z.B. (1, n) => mindestens 1, kein Maximum.
 
-### General/Spezialisierung
+#### Starke v. Schwache Entities
+Entitäten können schwach sein, das heißt sie können nur existieren, wenn sie mit einem anderen Entity verbunden sind. z.B. Ein Raum braucht ein Gebäude.
+Schwache Entitäten haben eine (1,1) - Kardinalität zu dem Entity, von dem sie abhängen. Ein Raum liegt immer in einem Gebäude, dass kann aber viele Räume haben
 
-Auch "Vererbung" können mit einem **Dreieck** dargestellt werden.
 
-Das ist dann eine "is-A" Beziehung. Ein "Student" ist ein "Mensch". Ein "Mensch" ist aber nicht unbedingt ein "Student". Aber ein "Professor" ist auch gerade so noch ein "Mensch" 
-
+### General/Spezialisierunzeptueller Entwurf
+− Abstraktionskonzepte
+− Richtlinien
 - Total (t neben dem Dreieck): Jedes Entity des Ober-Typs muss auch ein Entity des Unter-Typs sein
 - Partiell (p neben dem Dreieck): Es gibt Entities des Ober-Typs, die nicht auch ein Entity des Unter-Typs sind
 
 Die können wiederum:
 - Disjunkt: Ein Entity kann nur zu einem Unter-Typ gehören
 - Nicht Disjunkt: Ein Entity kann zu mehreren Unter-Typen gehören
+
+## Konzeptioneller Entwurf
+
+  - Klassifikation: Erkennen der Entitäten
+  - Aggregation: Zusammenfassen von Attributen zu Entitäten
+  - Assoziation: Erkennen von Beziehungen zwischen Entitäten
+  - Generalisierung: Erkennen von Generalisierungen
+
+Unterschied zwischen Entität und Attribut: Falls das Konzept eigene Eigenschaften hat oder mehrfach auftaucht => Entität | sonst Attribut
+Unterschied zwischen Generalisierung und Attribut: Falls das Unterkonzept andere Eigenschaften hat => Generalisierung | sonst Attribut
