feat: relationale datenmodelle

--- a/teachings/sibd/dbis/SWT2-0.mdx
+++ b/teachings/sibd/dbis/SWT2-0.mdx
@@ -3,10 +3,9 @@ title: "SWT 2.0"
 description: Nicht schooon wieder....
 author: Jonas Schneider
 date: 31/07/2023
-order: 1
+order: 2
 tags:
   [
-    UML,
     Entity-Relationship-Model,
     Datenbankentwurf
   ]
@@ -64,8 +63,8 @@ Schwache Entitäten haben eine (1,1) - Kardinalität zu dem Entity, von dem sie 
 
 
 ### General/Spezialisierunzeptueller Entwurf
-− Abstraktionskonzepte
-− Richtlinien
+- Abstraktionskonzepte
+- Richtlinien
 - Total (t neben dem Dreieck): Jedes Entity des Ober-Typs muss auch ein Entity des Unter-Typs sein
 - Partiell (p neben dem Dreieck): Es gibt Entities des Ober-Typs, die nicht auch ein Entity des Unter-Typs sind
 
@@ -82,3 +81,6 @@ Die können wiederum:
 
 Unterschied zwischen Entität und Attribut: Falls das Konzept eigene Eigenschaften hat oder mehrfach auftaucht => Entität | sonst Attribut
 Unterschied zwischen Generalisierung und Attribut: Falls das Unterkonzept andere Eigenschaften hat => Generalisierung | sonst Attribut
+
+![ER-Diagramm](/teaching-assets/sibd/dbis/teachings/er-diagramm.png)
+  
