--- a/teachings/sibd/dbis/exel2-0.mdx
+++ b/teachings/sibd/dbis/exel2-0.mdx
@@ -119,3 +119,7 @@ Verknüpfungen:
 
 Vielleicht guck ich mirs später nochmal an
 
+Oder mit ihren eigenen Worten:
+
+> "Wozu zur Hölle ist das Tupelkalkül zu gebrauchen?"
+
