--- a/teachings/sibd/dbis/Gremlin.mdx
+++ b/teachings/sibd/dbis/Gremlin.mdx
@@ -10,6 +10,8 @@ tags:
   ]
 ---
 
+> Bei dem Namen brauch ich keine Witze mehr
+
 # Grundlagen
 
 $G=(V,E)$ wie immer. Aber noch weitere Eigenschaften: Knoten und Kanten bekommen ID, Label, Records (Key-Value Paare). Kanten sind gerichtet
