--- a/teachings/sibd/dbis/Entwurfstheorie.mdx
+++ b/teachings/sibd/dbis/Entwurfstheorie.mdx
@@ -1,5 +1,5 @@
 ---
-title: Entwurfstheorie
+title: MALO 2.0
 description: Feintuning von Datenbank entwürfen
 author: Jonas Schneider
 date: 1/08/2023
@@ -8,7 +8,9 @@ tags:
   [
     Abhängigkeiten,
     Armstrong Kalkül,
-    Normalformen
+    Normalformen,
+    Synthesealgorithmus,
+    Dekompositionsalgorithmus,
   ]
 ---
 
