--- a/teachings/sibd/dbis/Entwurfstheorie.mdx
+++ b/teachings/sibd/dbis/Entwurfstheorie.mdx
@@ -64,13 +64,14 @@ Zweiter Durchlauf: Keine Änderung
 
 Die Kanonische Überdeckung hat die gleiche Menge von Ableitungen. Also beim Beispiel $\{A \to C, B \to A\}$
 
-## Normalformen
-- Erste Normalform: Alle Attribute haben atomare Werte (String, Integer, etc.)
-- Zweite Normalform: Alle Attribute sind voll funktional abhängig vom Primärschlüssel
-- Dritte Normalform: Für alle Nichtschlüsselattribute und jede Abhängigkeit $\alpha \to B$ muss $\alpha$ Superschlüssel sein (also nicht minimal)
-- Boyce-Codd Normalform: Für alle Abhängigkeiten $\alpha \to \beta$ muss $\alpha$ Superschlüssel sein (also nicht minimal)
+## Normalformen erklärt
+Alle Normalformen setzten die vorherige vorraus. Also 2NF setzt 1NF vorraus. 3NF setzt 2NF vorraus. BCNF setzt 3NF vorraus.
+- 0NF: Nicht normalisiert. Alles steht in einer einzigen Tabelle und ist nicht aufgeteilt.
+- 1NF: Alle Attribute haben atomare Werte (String, Integer, etc.). z.B. Name => Vorname, Nachname | Adresse => Straße, Hausnummer, PLZ, Ort
+- 2NF: Alle Attribute sind voll funktional abhängig vom Primärschlüssel. z.B. Menge ist voll funktional abhängig vom Bestellungs Nr. & Artikel Nr.
+- 3NF: Kein Nichtschlüsselattribut hängt transitiv von einem Schlüsselkandidaten ab. Bsp: Ort => PLZ => Kunden Nr. Ort ist transitiv abhängig von Kunden Nr. Somit neue Relation mit PLZ und Ort. (Synthesealgorithmus) 
+- BCNF: Jede Information wird genau einmal gespeichert (Dekompositionsalgorithmus)
 
-## Algorithmen
-//TODO: Algorithmen
 
-
+Im Endeeffekt das hier:
+https://normalizer.db.in.tum.de/index.py
