--- a/teachings/sibd/dbis/Transaktionsverwaltung.mdx
+++ b/teachings/sibd/dbis/Transaktionsverwaltung.mdx
@@ -87,4 +87,4 @@ Es gibt mehrere Klassen von Recoverbiilty:
 - `ST`: die Klasse aller Strikten Scheduler. $W_j(x) < p_i(x), i \neq j \implies a_j < p_i(x) \lor c_j < p_i(x)$. 
         Sprachlich das Objekt darf erst geschrieben/gelesen werden wenn der letzte Schreiber commit/aborted hat.  
 
-$RC \subset ACA \subset ST$
+$ST \subset ACA \subset RC$
