--- a/teachings/sibd/dbis/Gremlin.mdx
+++ b/teachings/sibd/dbis/Gremlin.mdx
@@ -18,17 +18,9 @@ $G=(V,E)$ wie immer. Aber noch weitere Eigenschaften: Knoten und Kanten bekommen
 
 ## Traversals
 
-Basics: Alle Knoten ausgegeben
+Basics: Alle Knoten ausgegeben: `g.V().toList()`
 
-  ```
-  g.V().toList()
-  ```
-
-Alle Kanten ausgegeben:
-
-  ```
-  g.E().toList()
-  ```
+Alle Kanten ausgegeben: `g.E().toList()`
 
 Steps:
 - sideEffekt Steps:
