--- a/teachings/cigol/Die Olchies und die Aussagenlogik.mdx
+++ b/teachings/cigol/Die Olchies und die Aussagenlogik.mdx
@@ -3,7 +3,7 @@ title: Die Olchies und die Aussagenlogik
 order: 1
 description: In dieser Folge finden die Olchies auf ihrer Schrotthalde eine sehr alte Form der Logik. Sie ist schwach und nicht allzu kompliziert aber sie reicht aus, um die Olchies zu verwirren.
 author: Jonas Schneider
-date: 29/06/2023
+date: 14/08/2023
 tags: [Einführung, Logik, Aussagenlogik]
 ---
 
@@ -41,4 +41,11 @@ Sie ist in der Aussagenlogik eine simple Funktion. Sie ordnet jeder Variable ein
 Also $\mathfrak{I}: \text{Var} \to \{0,1\}$.
 
 > Bsp. $\varphi = \lnot x_1 \lor x_2$.\
->  Sei $\mathfrak{I}$ Interpretation. $\mathfrak{I}(x_1) = 1$ und $\mathfrak{I}(x_2) = 1$.\
+>  Sei $\mathfrak{I}$ Interpretation. $\mathfrak{I}(x_1) = 1$ und $\mathfrak{I}(x_2) = 1$.
+
+Nun nehmen wir die Interpretation und wenden sie auf die Formel an.\
+
+> $\mathfrak{I}(\varphi) = [\![ \varphi ]\!]^\mathfrak{I} = \max ((1-1), 1) = 1$
+
+x> Ich werde von nun an die $[\![ \varphi ]\!]^\mathfrak{I} = [ \varphi]^\mathfrak{I}$ schreiben, sofern das nicht verwirrend ist mit normalen eckigen Klammern.
+
