feat: Anfang FO

--- a/teachings/cigol/Resolution.mdx
+++ b/teachings/cigol/Resolution.mdx
@@ -52,3 +52,20 @@ Und nun **Schlussregeln** (kommen nicht zum Schluss das sind Axiome):
 
 ![Schlussregeln](/teaching-assets/cigol/malo/assets/as_schlussregeln.png)
 
+Und dann kan man das wie folgt anwenden (wohlgemerkt es ist bottom up also von
+ unten nach oben): 
+
+![Sequenzkalkül](/teaching-assets/cigol/malo/assets/as_seqkalkül.png)
+
+Die letzten beiden sind nach kurzem überlegen trivialerweise Axiome.
+
+Doch wenn bei einer Ableitung etwa $X \implies Y$ und $Y \implies X$ kommt,
+ bildet das Sequenzkalkül eine Falsifizierende Interpretation (nur bei AL)
+
+Pippi Langstrumpf gefällt vor allem:
+
+- Seq. ist korrekt und vollständig
+
+## Aufgaben für Pippi Langstrumpf
+
+
