--- a/teachings/cigol/Einführung_Prädikatenlogik.mdx
+++ b/teachings/cigol/Einführung_Prädikatenlogik.mdx
@@ -43,7 +43,8 @@ Funktion/Relation $f^{\mathfrak{A}}$) für das Funktionssymbol $f$.
 
 **Substrukturen** sind relativ simple definiert: Nimm Teilmenge des Universum und 
 Nimm nur die Relationen/Funktionen die innerhalb dieser Teilmenge operieren.
-(Falls die Ergebnisse von den Funktionen wieder in der Teilmenge liegen so 
+Funktionen müssen immer abgeschlossen in dem Universum sein.
+(Falls die Ergebnisse von den Funktionen **der Elternstruktur** auch nur in der Teilmenge liegen so 
 ist die Struktur abgeschlossen). Erweiterungen sind das Gegenteil von Substrukturen
 
 Bei **Reduktionen** lassen wir einfach manche Funktionen/Relationen weg.
