--- a/teachings/cigol/Axiomatisierbarkeit.mdx
+++ b/teachings/cigol/Axiomatisierbarkeit.mdx
@@ -68,3 +68,28 @@ Und nun zu den wichtigen Sätzen:
 Also lassen sich Isomorphe Strukturen nicht durch die Prädikatenlogik unterscheiden
 und somit sind Modellklassen unter Isomorphie abgeschlossen und wenn $\mathfrak{A} \cong \mathfrak{B}$
 dann $\mathfrak{A} \in K$ gdw. $\mathfrak{B} \in K$
+
+### Theorie
+
+Dummer Name aber es ist einfach eine Menge von Sätzen $T \subseteq FO(\tau)$, die unter $\models$ abgeschlossen sind. Heißt alle Sätze $\psi \in FO(\tau)$
+mit $T \models \psi$ (das ist die Folgerungsbeziehung [Wenn T gilt gilt auch psi]), dann ist $\psi \in T$.
+
+Eine Theorie ist **vollständig** wenn entweder $\psi \in T$ oder $\lnot \psi \in T$ gilt.
+
+Die Theorie einer Struktur ($Th(\mathfrak{A} := \{\psi \mid \mathfrak{A} \models \psi\}$)) ist auch ziemlich ergibig.
+$Th(K)$ für Modellklassen ist analog definiert.
+
+Hierbei ist hilfreich: Wenn $\Phi, K$ axiomatisiert, dann ist $Th(K) = \{\psi \mid \Phi \models \psi\}
+
+> Jede Theorie lässt sich zu einer vollständigen erweitern
+
+
+
+### Elementare Äquivalenz
+
+Zwei Strukturen $\mathfrak{A}, \mathfrak{B}$ sind elementar äquivalent, wenn $Th(\mathfrak{A}) = Th{\mathfrak{B}}$ bzw. wenn für alle Sätze $\psi \in FO(\tau)$
+gilt:
+
+$\mathfrak{A} \models \psi$ gdw. \mathfrak{B} \models \psi$
+
+> Eine Theorie ist dann vollständig, wenn alle Modelle elementar äquivalent sind.
