--- a/teachings/cigol/Axiomatisierbarkeit.mdx
+++ b/teachings/cigol/Axiomatisierbarkeit.mdx
@@ -90,6 +90,6 @@ Hierbei ist hilfreich: Wenn $\Phi, K$ axiomatisiert, dann ist $Th(K) = \{\psi \m
 Zwei Strukturen $\mathfrak{A}, \mathfrak{B}$ sind elementar äquivalent, wenn $Th(\mathfrak{A}) = Th{\mathfrak{B}}$ bzw. wenn für alle Sätze $\psi \in FO(\tau)$
 gilt:
 
-$\mathfrak{A} \models \psi$ gdw. \mathfrak{B} \models \psi$
+$\mathfrak{A} \models \psi$ gdw. $\mathfrak{B} \models \psi$
 
 > Eine Theorie ist dann vollständig, wenn alle Modelle elementar äquivalent sind.
