--- a/teachings/cigol/Einführung_Prädikatenlogik.mdx
+++ b/teachings/cigol/Einführung_Prädikatenlogik.mdx
@@ -3,7 +3,7 @@ title: Das Magische Baumhaus geht auf die nächste Stufe (Einführung Prädikate
 order: 4
 description: Das Magische Baumhaus hat genug von der Aussagenlogik und braucht eine neue Herausforderung first order Logic...
 author: Jonas Schneider
-date: 16/08/2023
+date: 17/08/2023
 tags: [Einführung Prädikatenlogik, Syntax, Semantik, Universen]
 ---
 
@@ -115,4 +115,6 @@ ist vermutlich nicht das gleiche aber $\phi'$ ist genau dann erfüllbar wenn $\p
 
 ## Quantorenrang
 $qr(\psi)$ bezeichnet den **Quantorenrang** (wird später gebraucht). Zähl einfach die maximale verschachtelung Tiefe von Quantoren.
-Z.B. $\psi = \exists x (x = y) \lor \exists z (x = z) \quad qr(\psi) = 2$. Simpel 
+Z.B. $\psi = \exists x (x = y) \lor \exists z (x = z) \quad qr(\psi) = 2$. Simpel
+
+> Ein $\tau$-Satz ist einfach eine $\tau$-Formel **ohne** freie Variablen
