--- a/teachings/cigol/Axiomatisierbarkeit.mdx
+++ b/teachings/cigol/Axiomatisierbarkeit.mdx
@@ -92,4 +92,10 @@ gilt:
 
 $\mathfrak{A} \models \psi$ gdw. $\mathfrak{B} \models \psi$
 
+Zwei Strukturen sind m-äquivalent, wenn 
+
+$\mathfrak{A} \models \psi$ gdw. $\mathfrak{B} \models \psi$
+
+für alle Sätze $\psi \in FO(\tau)$ **mit** $qr(\psi) \le m$ (Quantorenrang)
+
 > Eine Theorie ist dann vollständig, wenn alle Modelle elementar äquivalent sind.
