--- a/teachings/cigol/EF_Spiele.mdx
+++ b/teachings/cigol/EF_Spiele.mdx
@@ -23,17 +23,17 @@ Das Spielfeld besteht nun aus **zwei** Strukturen. Es gibt die Spieler:
 Und das geht so:
 
 - Herausforderer sucht sich aus **einem** der beiden Strukturen ein Element aus $a_i \in A$ oder $b_i \in B$. Die Duplikatorin antwortet mit einem
-  Element aus der **anderen** Struktur. Eine G_m Partie geht $m$ Züge. Die Duplikatorin hat die Partie gewonnen, wenn $\{(a_1, b_1), ..., (a_m, b_m)\}
+  Element aus der **anderen** Struktur. Eine G_m Partie geht $m$ Züge. Die Duplikatorin hat die Partie gewonnen, wenn $\{(a_1, b_1), ..., (a_m, b_m)\}$
    ein lokaler Isomorphismus ist. Sonst verliert sie halt.
 
 - Eine Gewinnstrategie ist aus jeder erreichbaren Position mögliche Züge zu haben, sodass er/sie gewinnnt.
-- Spieler 1/2 gewinnt das $G_m(\mathfrak{A}, \mathfrak{B}), wenn es eine Gewinnstrategie gibt.
+- Spieler 1/2 gewinnt das $G_m(\mathfrak{A}, \mathfrak{B})$, wenn es eine Gewinnstrategie gibt.
 
 Zudem gibt es das $G(\mathfrak{A}, \mathfrak{B})$ das zugegeben schwerer für die Duplikatorin ist. Hier gewinnt der Herausforderer, wenn es mind. ein
 $m \in \mathbb{N}$ gibt, wo er $G_m(\mathfrak{A}, \mathfrak{B})$ gewinnt. Also in jeder Partie darf der Herausforderer zunächst die Zugzahl bestimmen
  und dann wird das $G_m$ gespielt.
 
-> Nun der Satz von Ehrenfeucht-Fraïssé besagt nun: <br/>
+> Nun der Satoz von Ehrenfeucht-Fraïssé besagt nun: <br/>
 > 1. $\mathfrak{A} \equiv \mathfrak{B}$ gdw. Die Duplikatorin gewinnt das $G(\mathfrak{A}, \mathfrak{B})$ <br/>
 > 2. $\mathfrak{A} \equiv_m \mathfrak{B}$ gdw. Die Duplikatorin gewinnt $G_m(\mathfrak{A}, \mathfrak{B})$
 
