--- a/teachings/cigol/EF_Spiele.mdx
+++ b/teachings/cigol/EF_Spiele.mdx
@@ -39,5 +39,5 @@ $m \in \mathbb{N}$ gibt, wo er $G_m(\mathfrak{A}, \mathfrak{B})$ gewinnt. Also i
 
 Und ein weiterer Satz:
 
-> Wenn es eine Formel $\psi(x)$ mit $qr(\psi) = m$ gibt, so dass $\mathfrak{A} \models \psi(a)$ und $\mathfrak{B} \models \lnot \psi{b}$. Dann hat
+> Wenn es eine Formel $\psi(x)$ mit $qr(\psi) = m$ gibt, so dass $\mathfrak{A} \models \psi(a)$ und $\mathfrak{B} \models \lnot \psi(b)$. Dann hat
 >  der Herausforderer eine Gewinnstrategie.
